--- a/src/app.module.css
+++ b/src/app.module.css
@@ -6,30 +6,35 @@
   padding: 0;
 }
 
-.App {
-  text-align: center;
+.app {
   background-color: #282c34;
   min-height: 100vh;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
+  padding: 16px;
 }
 
-.i-cursive {
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.iCursive {
   font-family: "Marck Script", cursive;
 }
 
-.App-logo {
+.appLogo {
   max-height: 32px;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .appLogo {
     animation: App-logo-spin infinite 12s linear;
   }
 }
 
-.App-header {
+.appHeader {
   display: flex;
   gap: 16px;
   align-items: center;
@@ -38,7 +43,7 @@
   color: white;
 }
 
-.App-link {
+.appLink {
   color: #61dafb;
 }
 
@@ -49,5 +54,11 @@
 
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .app {
+    padding: 32px 64px;
   }
 }
