--- a/src/components/item.module.css
+++ b/src/components/item.module.css
@@ -1,30 +1,147 @@
 .arrowIcon {
     color: #2B8CFC;
+    margin-left: 16px;
+}
+
+.item {
+    flex: 0 0 auto;
+}
+
+.itemHeader .content,
+.head {
+    display: none;
+}
+
+.itemHeader .head {
+    display: block;
+}
+
+.title {
+    color: #BBA390;
     font-size: 24px;
+    line-height: 120%;
+    letter-spacing: 10%;
+    font-family: "Futura PT", sans-serif;
+    text-align: center;
+}
+
+.text {
+    color: #91A4B8;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 20px;
+    text-align: center;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+}
+
+.subtitle {
+    color: #fff;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 6%;
+    font-family: "Futura PT", sans-serif;
+    text-transform: uppercase;
+}
+
+.image {
+    max-width: 100%;
+}
+
+.item:nth-child(1) {
+    grid-area: a;
+}
+
+.item:nth-child(2) {
+    grid-area: b;
+}
+
+.item:nth-child(3) {
+    grid-area: c;
+}
+
+.item:nth-child(4) {
+    grid-area: d;
+}
+
+.item:nth-child(5) {
+    grid-area: e;
+}
+
+.item:nth-child(6) {
+    grid-area: f;
 }
 
 @media screen and (min-width: 768px) {
+    .content {
+        max-width: 485px;
+    }
+
+    .head {
+        max-width: 520px;
+    }
+
     .item:nth-child(1) {
-        grid-area: b;
+        grid-area: a;
+        min-height: 350px;
     }
 
     .item:nth-child(2) {
-        grid-area: c;
+        grid-area: b;
+        min-height: 700px;
     }
 
     .item:nth-child(3) {
-        grid-area: d;
+        min-height: 700px;
+        grid-area: c;
     }
 
     .item:nth-child(4) {
+        min-height: 700px;
+        grid-area: d;
+    }
+
+    .item:nth-child(5) {
+        min-height: 700px;
         grid-area: e;
     }
 
-    .item:nth-child(1) {
+    .item:nth-child(6) {
         grid-area: f;
     }
 
-    .image {
-        max-width: 90%;
+    .item:nth-child(2) .content,
+    .item:nth-child(4) .content,
+    .item:nth-child(6) .content {
+        margin-left: auto;
+    }
+
+    .item:nth-child(3) .content,
+    .item:nth-child(5) .content {
+        flex-direction: column-reverse;
+    }
+
+    .title {
+        font-size: 46px;
+        text-align: left;
+        padding-top: 48px;
+        margin-bottom: 48px;
+    }
+
+    .text {
+        color: #8CAAC8;
+        font-size: 16px;
+        line-height: 32px;
+        text-align: left;
+        margin-bottom: 96px;
+    }
+
+    .subtitle {
+        font-size: 24px;
+        line-height: 50px;
+        letter-spacing: 8%;
     }
 }
