--- a/src/components/subhead.module.css
+++ b/src/components/subhead.module.css
@@ -21,6 +21,10 @@
     text-align: center;
 }
 
+.centered {
+    text-align: center;
+}
+
 @media screen and (min-width: 768px) {
     .title {
         font-size: 46px;
