--- a/src/app.module.css
+++ b/src/app.module.css
@@ -11,7 +11,7 @@
   min-height: 100vh;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  padding: 16px;
+  padding: 16px 20px;
 }
 
 .wrapper {
