--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -5,6 +5,13 @@
 }
 
 .logo {
-    max-width: 160px;
-    max-height: 26px;
+    max-width: 90px;
+    max-height: 15px;
+}
+
+@media screen and (min-width:768px) {
+    .logo {
+        max-width: 160px;
+        max-height: 26px;
+    }
 }
