--- a/src/app.module.css
+++ b/src/app.module.css
@@ -4,14 +4,19 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .app {
-  background-color: #282c34;
   min-height: 100vh;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   padding: 16px 20px;
+  background: #282c34 url('../public/images/svg/ellipse16.svg');
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position: top 60px left -50px;
+
 }
 
 .wrapper {
@@ -39,5 +44,6 @@
 @media screen and (min-width: 768px) {
   .app {
     padding: 32px 64px;
+    background-position: top 100px left 0;
   }
 }
