--- a/src/components/cooperation.module.css
+++ b/src/components/cooperation.module.css
@@ -31,10 +31,29 @@
     align-self: center;
 }
 
+.footer {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
 @media screen and (min-width: 768px) {
     .note {
         font-size: 16px;
         line-height: 28px;
         text-align: center;
+    }
+
+    .list {
+        flex-direction: row;
+    }
+
+    .item {
+        flex-direction: column;
+        max-width: calc(25% - 12px);
+    }
+
+    .footer {
+        flex-direction: row;
     }
 }
