--- a/src/components/button.module.css
+++ b/src/components/button.module.css
@@ -13,6 +13,10 @@
     width: 100%;
 }
 
+.centered {
+    text-align: center;
+}
+
 @media screen and (min-width: 768px) {
     .button {
         font-size: 20px;
