--- a/src/components/cooperation.module.css
+++ b/src/components/cooperation.module.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+    margin-bottom: 16px;
 }
 
 .item {
@@ -55,5 +56,6 @@
 
     .footer {
         flex-direction: row;
+        justify-content: center;
     }
 }
