--- a/src/components/cards.module.css
+++ b/src/components/cards.module.css
@@ -4,7 +4,7 @@
     background-size: 100%;
     background-position: top 70px left 0px;
     width: 100%;
-    padding-bottom: 16px;
+    padding: var(--padding-top) var(--padding-lr);
 }
 
 .list {
