--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     gap: 16px;
+    padding: var(--padding-top) var(--padding-lr);
 }
 
 .logo {
