--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root {
+  --padding-top: 16px;
+  --padding-lr: 20px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,4 +20,11 @@ code {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+@media screen and (min-width: 768px) {
+  :root {
+    --padding-top: 32px;
+    --padding-lr: 64px;
+  }
 }
