--- a/src/components/list.module.css
+++ b/src/components/list.module.css
@@ -5,7 +5,7 @@
 
 .inner {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: minmax(50%, 1fr) minmax(50%, 1fr);
   grid-gap: 8px;
 }
 
