--- a/src/components/subhead.module.css
+++ b/src/components/subhead.module.css
@@ -47,10 +47,10 @@
 
 @media screen and (min-width: 768px) {
   .title {
-    font-size: 46px;
+    font-size: 28px;
     text-align: left;
-    padding-top: 48px;
-    margin-bottom: 48px;
+    padding-top: 32px;
+    margin-bottom: 32px;
   }
 
   .text {
@@ -70,5 +70,12 @@
 
   .centered {
     text-align: center;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .title {
+    font-size: 46px;
+    padding-top: 48px;
+    margin-bottom: 48px;
   }
 }
