--- a/src/components/button.module.css
+++ b/src/components/button.module.css
@@ -1,28 +1,97 @@
 .button,
 .mobile100 {
-    background-color: #2B8CFC;
-    border: 1px solid #2B8CFC;
-    padding: 4px 16px;
-    font-size: 16px;
-    line-height: 30px;
-    font-weight: 700;
-    color: #fff;
+  background-color: #2B8CFC;
+  border: 1px solid #2B8CFC;
+  padding: 4px 16px;
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 700;
+  color: #fff;
 }
 
 .mobile100 {
-    width: 100%;
+  width: 100%;
 }
 
 .centered {
-    text-align: center;
+  text-align: center;
+
+  .buttonStore {
+    margin: 0 auto;
+  }
+}
+
+.buttonStore {
+  width: 73px;
+  height: 73px;
+  background-color: #122E4A;
+  box-shadow: 12px 22px 42px rgba(4, 20, 37, 0.25);
+  border: 0;
+  display: none;
+
+  span {
+    display: block;
+  }
+}
+
+.storeClass {
+  .button {
+    display: none;
+  }
+
+  .buttonStore {
+    display: inherit;
+  }
+}
+
+.big {
+  .buttonStore {
+    width: 230px;
+    height: 230px;
+    border-radius: 0 30px;
+
+    .image {
+      max-height: 40px;
+      max-width: 150px;
+      margin-bottom: 12px;
+    }
+  }
+
+  .caption {
+    font-size: 14px;
+    line-height: 20px;
+    color: #6485A7;
+    padding: 0 32px;
+  }
+}
+
+.middle {
+  .buttonStore {
+    width: 159px;
+    height: 159px;
+    border-radius: 30px 0;
+
+    .image {
+      max-height: 32px;
+      max-width: 103px;
+      margin-bottom: 6px;
+    }
+  }
+
+  .caption {
+    font-size: 10px;
+    line-height: 14px;
+    color: #6485A7;
+    padding: 0 24px;
+  }
 }
 
 @media screen and (min-width: 768px) {
-    .button {
-        font-size: 20px;
-    }
+  .button {
+    font-size: 20px;
+  }
 
-    .mobile100 {
-        width: inherit;
-    }
+  .mobile100 {
+    width: inherit;
+  }
 }
