--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,18 +1,23 @@
 .wrapper {
-    display: flex;
-    justify-content: space-between;
-    gap: 16px;
-    padding: var(--padding-top) var(--padding-lr);
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+  padding: var(--padding-top) var(--padding-lr);
+}
+
+.inner {
+  display: flex;
+  gap: 16px;
 }
 
 .logo {
-    max-width: 90px;
-    max-height: 15px;
+  max-width: 90px;
+  max-height: 15px;
 }
 
 @media screen and (min-width:768px) {
-    .logo {
-        max-width: 160px;
-        max-height: 26px;
-    }
+  .logo {
+    max-width: 160px;
+    max-height: 26px;
+  }
 }
