--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,11 +1,24 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-
-  padding: var(--padding-top) var(--padding-lr);
 }
 
-.inner {}
+.section {
+  padding: var(--padding-top) var(--padding-lr);
+  text-align: center;
+}
+
+.sectionA {
+  background: rgba(42, 72, 107, 1);
+}
+
+.sectionB {
+  background: rgba(32, 59, 90, 1);
+}
+
+.sectionC {
+  background: rgba(24, 48, 76, 1);
+}
 
 .logo {
   max-width: 90px;
@@ -13,6 +26,15 @@
 }
 
 @media screen and (min-width:768px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .section {
+    text-align: inherit;
+  }
+
   .logo {
     max-width: 160px;
     max-height: 26px;
