--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -13,6 +13,7 @@
   flex-direction: column-reverse;
   row-gap: 24px;
   background: rgba(42, 72, 107, 1);
+  align-items: center;
 }
 
 .sectionB {
@@ -21,6 +22,10 @@
 
 .sectionC {
   background: rgba(24, 48, 76, 1);
+}
+
+.sectionD {
+  background: rgba(18, 37, 59, 1);
 }
 
 .logo {
@@ -38,6 +43,7 @@
   .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: 'a b c' 'a d c';
   }
 
   .section {
@@ -46,7 +52,24 @@
 
   .sectionA {
     flex-direction: column;
+    grid-area: a;
+    align-items: start;
   }
+
+  .sectionB {
+    grid-area: b;
+  }
+
+  .sectionC {
+    grid-area: c;
+    background: rgba(24, 48, 77, 1);
+  }
+
+  .sectionD {
+    grid-area: d;
+    background: rgba(32, 59, 90, 1);
+  }
+
   .listA {
     display: grid;
     grid-template-columns: 1fr 1fr;
