--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -22,6 +22,9 @@
 
 .sectionC {
   background: rgba(24, 48, 76, 1);
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .sectionD {
@@ -37,6 +40,13 @@
   display: flex;
   flex-direction: column;
   row-gap: 16px;
+}
+
+.listRow {
+  display: flex;
+  column-gap: 20px;
+  color: #fff;
+  justify-content: center;
 }
 
 @media screen and (min-width:768px) {
@@ -73,7 +83,7 @@
   .listA {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 16px;
+    column-gap: 20px;
   }
 
   .logo {
